[gd_scene load_steps=17 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Terrain.tscn" type="PackedScene" id=3]
[ext_resource path="res://Target/Target.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/RayCast.gd" type="Script" id=5]
[ext_resource path="res://NPC/NPC.tscn" type="PackedScene" id=6]
[ext_resource path="res://NPC/NPC.gd" type="Script" id=7]
[ext_resource path="res://UI/Dialogue.gd" type="Script" id=8]
[ext_resource path="res://UI/UI.gd" type="Script" id=9]
[ext_resource path="res://Drone/Drone.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Square.ttf" type="DynamicFontData" id=11]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 1, 0, 0, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 4.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=2]
material = SubResource( 1 )
radius = 0.5
height = 1.0

[sub_resource type="SphereShape" id=3]
radius = 5.38318

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 11 )

[node name="Game" type="Spatial"]

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.580959, 0, -0.813933, 0, 1, 0, 0.813933, 0, -0.580959, 41.2827, 0.429002, 14.3405 )
collision_layer = 2
collision_mask = 7
script = ExtResource( 2 )

[node name="Pivot" type="Position3D" parent="Player"]

[node name="Camera" type="Camera" parent="Player/Pivot"]
transform = Transform( -1, 1.51808e-08, -8.60946e-08, 0, 0.984808, 0.173648, 8.74228e-08, 0.173648, -0.984808, 0, 5, -8 )

[node name="RayCast" type="RayCast" parent="Player/Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0.547115 )
enabled = true
cast_to = Vector3( 0, 0, 100 )
script = ExtResource( 5 )

[node name="Reticule" type="Position3D" parent="Player/Pivot/RayCast"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 50 )

[node name="MeshInstance" type="MeshInstance" parent="Player/Pivot/RayCast/Reticule"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0732412, 0 )
mesh = SubResource( 2 )

[node name="lowpoly_scene" parent="." instance=ExtResource( 3 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )

[node name="Target_container" type="Spatial" parent="."]
visible = false

[node name="Target" parent="Target_container" instance=ExtResource( 4 )]
transform = Transform( 0.939693, 0, 0.34202, 0, 1, 0, -0.34202, 0, 0.939693, -27, 4, 9 )

[node name="Target2" parent="Target_container" instance=ExtResource( 4 )]
transform = Transform( 0.939693, 0, -0.34202, 0, 1, 0, 0.34202, 0, 0.939693, -32.1904, 4, -18.7284 )

[node name="Target3" parent="Target_container" instance=ExtResource( 4 )]
transform = Transform( 0.766044, 0, -0.642788, 0, 1, 0, 0.642788, 0, 0.766044, -63.222, 19.1134, -46.9825 )

[node name="Target4" parent="Target_container" instance=ExtResource( 4 )]
transform = Transform( 0.766044, 0, -0.642788, 0, 1, 0, 0.642788, 0, 0.766044, -44.2533, 4.59589, -40.3871 )

[node name="Target5" parent="Target_container" instance=ExtResource( 4 )]
transform = Transform( 0.766044, 0, -0.642788, 0, 1, 0, 0.642788, 0, 0.766044, 10.2562, 7.66289, -52.4346 )

[node name="Drone_container" type="Spatial" parent="."]

[node name="Drone1" parent="Drone_container" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 100 )

[node name="NPC" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 40.0073, 0.575289, -11.747 )
script = ExtResource( 7 )

[node name="Area" type="Area" parent="NPC"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="NPC/Area"]
shape = SubResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 9 )

[node name="Damage" type="ColorRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 0 )

[node name="Background" type="ColorRect" parent="UI"]
anchor_right = 1.0
margin_bottom = 30.0
color = Color( 0, 0, 0, 0.501961 )

[node name="Score" type="Label" parent="UI"]
margin_left = 10.0
margin_right = 510.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 4 )
text = "Score: "
valign = 1

[node name="Time" type="Label" parent="UI"]
margin_left = 512.0
margin_right = 1014.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 5 )
text = "Timer: 00:00"
align = 2
valign = 1

[node name="Timer" type="Timer" parent="UI"]

[node name="Dialogue" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="Background" type="ColorRect" parent="UI/Dialogue"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -30.0
color = Color( 0, 0, 0, 0.501961 )

[node name="Text" type="RichTextLabel" parent="UI/Dialogue"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_bottom = 10.0
bbcode_enabled = true

[connection signal="body_entered" from="NPC/Area" to="NPC" method="_on_Area_body_entered"]
[connection signal="body_exited" from="NPC/Area" to="NPC" method="_on_Area_body_exited"]
[connection signal="timeout" from="UI/Timer" to="UI" method="_on_Timer_timeout"]
